Updated scaffold templates.

--- a/src/templates/scaffolding/renderEditor.template
+++ b/src/templates/scaffolding/renderEditor.template
@@ -37,7 +37,10 @@
  		sb << ' from="${' << "${property.type.name}?.values()" << '}"'
  		sb << ' keys="${' << property.type.name << '.values()*.name()}"'
 		if (isRequired()) sb << ' required=""'
-		sb << ' value="${' << "${domainInstance}?.${property.name}?.name()" << '}"'
+		sb << ' value="${' << "${domainInstance}?.${property.name}?.name()" << '}" '
+                cp.attributes.each { k, v ->
+                    sb << "${k}=\"${v}\" "
+                }
 		sb << renderNoSelection(property)
 		sb << '/>'
 		sb as String
@@ -71,7 +74,7 @@
 				} else if (cp.email) {
 					sb << '<g:field type="email"'
 				} else {
-					sb << '<g:textField class="form-control"'
+					sb << '<g:textField'
 				}
 				sb << ' name="' << property.name << '"'
 				if (cp.maxSize) sb << ' maxlength="' << cp.maxSize << '"'
@@ -79,7 +82,7 @@
 				if (cp.matches) sb << ' pattern="${' << "${domainInstance}.constraints.${property.name}.matches" << '}"'
 				if (isRequired()) sb << ' required=""'
 				sb << ' value="${' << "${domainInstance}?.${property.name}" << '}"'
-				sb << '/>'
+				sb << 'class="form-control" />'
 			}
 			sb as String
         }
