Updated Grails version.

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Tue Apr 08 14:17:03 IST 2014
-app.grails.version=2.3.7
-app.name=intellimeet
-app.version=0.1
+#Sun Jul 20 06:14:56 IST 2014
 app.context=/
+app.grails.version=2.3.11
+app.name=intellimeet
+app.servlet.version=3.0
+app.version=0.1
